@@ -1,37 +1,28 @@
 package mod.chiselsandbits.chiseledblock.serialization;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
-import java.util.Objects;
-import java.util.Optional;
-
 import mod.chiselsandbits.core.Log;
 import mod.chiselsandbits.helpers.ModUtil;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.block.state.properties.Property;
-import net.minecraft.util.StringRepresentable;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.StringRepresentable;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.Property;
 import net.minecraftforge.registries.ForgeRegistries;
+
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Objects;
+import java.util.Optional;
 
 public class StringStates
 {
 
-	public static int getStateIDFromName(
-			final String name )
-	{
-		final String parts[] = name.split( "[?&]" );
+	public static int getStateIDFromName(String name) {
+		final String[] parts = name.split( "[?&]" );
 
-		try
-		{
-			parts[0] = URLDecoder.decode( parts[0], "UTF-8" );
-		}
-		catch ( final UnsupportedEncodingException e )
-		{
-			Log.logError( "Failed to reload Property from store data : " + name, e );
-		}
+		parts[0] = URLDecoder.decode( parts[0], StandardCharsets.UTF_8);
 
 		final Block blk = ForgeRegistries.BLOCKS.getValue(new ResourceLocation(parts[0]));
 
@@ -54,11 +45,11 @@ public class StringStates
 			{
 				if ( parts[x].length() > 0 )
 				{
-					final String nameval[] = parts[x].split( "[=]" );
+					final String[] nameval = parts[x].split( "[=]" );
 					if ( nameval.length == 2 )
 					{
-						nameval[0] = URLDecoder.decode( nameval[0], "UTF-8" );
-						nameval[1] = URLDecoder.decode( nameval[1], "UTF-8" );
+						nameval[0] = URLDecoder.decode( nameval[0], StandardCharsets.UTF_8);
+						nameval[1] = URLDecoder.decode( nameval[1], StandardCharsets.UTF_8);
 
 						state = withState( state, blk, nameval );
 					}
@@ -73,7 +64,6 @@ public class StringStates
 		return ModUtil.getStateId( state );
 	}
 
-	@SuppressWarnings( { "unchecked", "rawtypes" } )
 	private static BlockState withState(
 			final BlockState state,
 			final Block blk,
@@ -82,7 +72,7 @@ public class StringStates
 		final Property<?> prop = blk.getStateDefinition().getProperty(nameval[0]);
 		if ( prop == null )
 		{
-			Log.info( nameval[0] + " is not a valid property for " + blk.getRegistryName() );
+			Log.info( nameval[0] + " is not a valid property for " + ForgeRegistries.BLOCKS.getKey(blk) );
 			return state;
 		}
 
@@ -97,7 +87,7 @@ public class StringStates
         }
         else
         {
-            Log.info( value + " is not a valid value of " + property.getName() + " for " + blockState.getBlock().getRegistryName() );
+            Log.info( value + " is not a valid value of " + property.getName() + " for " + ForgeRegistries.BLOCKS.getKey(blockState.getBlock()) );
             return blockState;
         }
     }
@@ -110,44 +100,37 @@ public class StringStates
 
 		String sname = "air?";
 
-		try
+		final StringBuilder stateName = new StringBuilder( URLEncoder.encode( Objects.requireNonNull(ForgeRegistries.BLOCKS.getKey(blk)).toString(), StandardCharsets.UTF_8) );
+		stateName.append( '?' );
+
+		boolean first = true;
+		for ( final Property<?> p : state.getBlock().getStateDefinition().getProperties() )
 		{
-			final StringBuilder stateName = new StringBuilder( URLEncoder.encode( Objects.requireNonNull(blk.getRegistryName()).toString(), "UTF-8" ) );
-			stateName.append( '?' );
-
-			boolean first = true;
-			for ( final Property<?> p : state.getBlock().getStateDefinition().getProperties() )
+			if ( !first )
 			{
-				if ( !first )
-				{
-					stateName.append( '&' );
-				}
-
-				first = false;
-
-				final Comparable<?> propVal = state.getValue(p);
-
-				String saveAs;
-				if ( propVal instanceof StringRepresentable )
-				{
-					saveAs = ( (StringRepresentable) propVal ).getSerializedName();
-				}
-				else
-				{
-					saveAs = propVal.toString();
-				}
-
-				stateName.append( URLEncoder.encode( p.getName(), "UTF-8" ) );
-				stateName.append( '=' );
-				stateName.append( URLEncoder.encode( saveAs, "UTF-8" ) );
+				stateName.append( '&' );
 			}
 
-			sname = stateName.toString();
+			first = false;
+
+			final Comparable<?> propVal = state.getValue(p);
+
+			String saveAs;
+			if ( propVal instanceof StringRepresentable )
+			{
+				saveAs = ( (StringRepresentable) propVal ).getSerializedName();
+			}
+			else
+			{
+				saveAs = propVal.toString();
+			}
+
+			stateName.append( URLEncoder.encode( p.getName(), StandardCharsets.UTF_8) );
+			stateName.append( '=' );
+			stateName.append( URLEncoder.encode( saveAs, StandardCharsets.UTF_8) );
 		}
-		catch ( final UnsupportedEncodingException e )
-		{
-			Log.logError( "Failed to Serialize State", e );
-		}
+
+		sname = stateName.toString();
 
 		return sname;
 	}
